// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders markup with state 1`] = `
<ng-ais-menu
  cx={[Function Function]}
  limitMin={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    
    <div
      class="ais-Menu-body ais-body"
    >
      
          
      <ul
        class="ais-Menu-list"
      >
        
            
        
        <li
          class="ais-Menu-item ais-Menu-item--selected"
        >
          
              
          <a
            href=""
          >
            
                foo
                
            <span
              class="ais-Menu-count"
            >
              2
            </span>
            
              
          </a>
          
            
        </li>
        <li
          class="ais-Menu-item"
        >
          
              
          <a
            href=""
          >
            
                bar
                
            <span
              class="ais-Menu-count"
            >
              3
            </span>
            
              
          </a>
          
            
        </li>
        <li
          class="ais-Menu-item"
        >
          
              
          <a
            href=""
          >
            
                foobar
                
            <span
              class="ais-Menu-count"
            >
              4
            </span>
            
              
          </a>
          
            
        </li>
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
      
  </div>
    
</ng-ais-menu>
`;

exports[`Menu renders markup without state 1`] = `
<ng-ais-menu
  cx={[Function Function]}
  limitMin={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    
    <div
      class="ais-Menu-body ais-body"
    >
      
          
      <ul
        class="ais-Menu-list"
      >
        
            
        
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
      
  </div>
    
</ng-ais-menu>
`;

exports[`Menu should apply \`transformItems\` if specified 1`] = `
<ng-ais-menu
  cx={[Function Function]}
  limitMin={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  transformItems={[Function Function]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    
    <div
      class="ais-Menu-body ais-body"
    >
      
          
      <ul
        class="ais-Menu-list"
      >
        
            
        
        <li
          class="ais-Menu-item ais-Menu-item--selected"
        >
          
              
          <a
            href=""
          >
            
                transformed - foo
                
            <span
              class="ais-Menu-count"
            >
              2
            </span>
            
              
          </a>
          
            
        </li>
        <li
          class="ais-Menu-item"
        >
          
              
          <a
            href=""
          >
            
                transformed - bar
                
            <span
              class="ais-Menu-count"
            >
              3
            </span>
            
              
          </a>
          
            
        </li>
        <li
          class="ais-Menu-item"
        >
          
              
          <a
            href=""
          >
            
                transformed - foobar
                
            <span
              class="ais-Menu-count"
            >
              4
            </span>
            
              
          </a>
          
            
        </li>
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
      
  </div>
    
</ng-ais-menu>
`;

exports[`Menu should be hidden with \`autoHideContainer\` 1`] = `
<ng-ais-menu
  autoHideContainer={[Function Boolean]}
  cx={[Function Function]}
  limitMin={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    
    
      
  </div>
    
</ng-ais-menu>
`;
